// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ab sequence many 'a' Error to match snapshot 1`] = `
{
  "expected": [
    "'b'",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`ab sequence many 'aa' Error to match snapshot 1`] = `
{
  "expected": [
    "'b'",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`ab sequence many 'ab' AST to match snapshot 1`] = `
[
  [
    "a",
    "b",
  ],
]
`;

exports[`ab sequence many 'aba' Error to match snapshot 1`] = `
{
  "expected": [
    "'b'",
  ],
  "pos": {
    "column": 4,
    "index": 3,
    "line": 1,
  },
}
`;

exports[`ab sequence many 'abab' AST to match snapshot 1`] = `
[
  [
    "a",
    "b",
  ],
  [
    "a",
    "b",
  ],
]
`;

exports[`ab sequence many 'baba' Error to match snapshot 1`] = `
{
  "expected": [
    "'a'",
    "eof",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`ab sequence many 'bcaba' Error to match snapshot 1`] = `
{
  "expected": [
    "'a'",
    "eof",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`binary left '+ab' Error to match snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`binary left 'a + a' AST to match snapshot 1`] = `
[
  "a",
  "+",
  "a",
]
`;

exports[`binary left 'a + b' Error to match snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": {
    "column": 5,
    "index": 4,
    "line": 1,
  },
}
`;

exports[`binary left 'a' AST to match snapshot 1`] = `"a"`;

exports[`binary left 'a+a' AST to match snapshot 1`] = `
[
  "a",
  "+",
  "a",
]
`;

exports[`binary left 'ab+' Error to match snapshot 1`] = `
{
  "expected": [
    "'+'",
    "eof",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`binary left 'bcaba' Error to match snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`binary right '+ab' Error to match snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`binary right 'a + a' AST to match snapshot 1`] = `
[
  "a",
  "+",
  "a",
]
`;

exports[`binary right 'a + b' Error to match snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": {
    "column": 5,
    "index": 4,
    "line": 1,
  },
}
`;

exports[`binary right 'a' AST to match snapshot 1`] = `"a"`;

exports[`binary right 'a+a' AST to match snapshot 1`] = `
[
  "a",
  "+",
  "a",
]
`;

exports[`binary right 'ab+' Error to match snapshot 1`] = `
{
  "expected": [
    "'+'",
    "eof",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`binary right 'bcaba' Error to match snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`lazy sequence trim 'b  a b' AST to match snapshot 1`] = `
[
  "b",
  "a",
  "b",
]
`;

exports[`lazy sequence trim 'b ab' AST to match snapshot 1`] = `
[
  "b",
  "a",
  "b",
]
`;

exports[`lazy sequence trim 'b abb' Error to match snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 5,
    "index": 4,
    "line": 1,
  },
}
`;

exports[`lazy sequence trim 'ba  b' AST to match snapshot 1`] = `
[
  "b",
  "a",
  "b",
]
`;

exports[`lazy sequence trim 'ba b' AST to match snapshot 1`] = `
[
  "b",
  "a",
  "b",
]
`;

exports[`lazy sequence trim 'bab' AST to match snapshot 1`] = `
[
  "b",
  "a",
  "b",
]
`;

exports[`lazy sequence trim 'bcaba' Error to match snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`many 'a' AST to match snapshot 1`] = `
[
  "a",
]
`;

exports[`many 'aa' AST to match snapshot 1`] = `
[
  "a",
  "a",
]
`;

exports[`many 'aaa' AST to match snapshot 1`] = `
[
  "a",
  "a",
  "a",
]
`;

exports[`many 'abaa' Error to match snapshot 1`] = `
{
  "expected": [
    "'a'",
    "eof",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`or 'a' AST to match snapshot 1`] = `"a"`;

exports[`or 'b  a b' Error to match snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`or 'b abb' Error to match snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`or 'b' AST to match snapshot 1`] = `"b"`;

exports[`or 'bb' Error to match snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`or 'bcaba' Error to match snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`or 'c' AST to match snapshot 1`] = `"c"`;

exports[`or sequence 'ab' Error to match snapshot 1`] = `
{
  "expected": [
    "'de'",
  ],
  "pos": {
    "column": 3,
    "index": 2,
    "line": 1,
  },
}
`;

exports[`or sequence 'aba' Error to match snapshot 1`] = `
{
  "expected": [
    "'de'",
  ],
  "pos": {
    "column": 3,
    "index": 2,
    "line": 1,
  },
}
`;

exports[`or sequence 'abc' Error to match snapshot 1`] = `
{
  "expected": [
    "'de'",
  ],
  "pos": {
    "column": 3,
    "index": 2,
    "line": 1,
  },
}
`;

exports[`or sequence 'abde' AST to match snapshot 1`] = `
[
  "ab",
  "de",
]
`;

exports[`or sequence 'bcaba' Error to match snapshot 1`] = `
{
  "expected": [
    "'ab'",
    "'c'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`or sequence 'c' Error to match snapshot 1`] = `
{
  "expected": [
    "'de'",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`or sequence 'cde' AST to match snapshot 1`] = `
[
  "c",
  "de",
]
`;

exports[`postfix '-ab' Error to match snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`postfix 'a' AST to match snapshot 1`] = `"a"`;

exports[`postfix 'a- b' Error to match snapshot 1`] = `
{
  "expected": [
    "'-'",
    "eof",
  ],
  "pos": {
    "column": 3,
    "index": 2,
    "line": 1,
  },
}
`;

exports[`postfix 'a-' AST to match snapshot 1`] = `
[
  "-",
  "a",
]
`;

exports[`postfix 'a--' AST to match snapshot 1`] = `
[
  "-",
  [
    "-",
    "a",
  ],
]
`;

exports[`postfix 'ab-' Error to match snapshot 1`] = `
{
  "expected": [
    "'-'",
    "eof",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`postfix 'bcaba' Error to match snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`prefix '--a' AST to match snapshot 1`] = `
[
  "-",
  [
    "-",
    "a",
  ],
]
`;

exports[`prefix '-a' AST to match snapshot 1`] = `
[
  "-",
  "a",
]
`;

exports[`prefix '-ab' Error to match snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 3,
    "index": 2,
    "line": 1,
  },
}
`;

exports[`prefix 'a - b' Error to match snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`prefix 'a' AST to match snapshot 1`] = `"a"`;

exports[`prefix 'ab-' Error to match snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`prefix 'bcaba' Error to match snapshot 1`] = `
{
  "expected": [
    "'-'",
    "'a'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`regex '1' AST to match snapshot 1`] = `
{
  "range": {
    "from": {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "to": {
      "column": 2,
      "index": 1,
      "line": 1,
    },
  },
  "value": 1,
}
`;

exports[`regex '12' AST to match snapshot 1`] = `
{
  "range": {
    "from": {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "to": {
      "column": 3,
      "index": 2,
      "line": 1,
    },
  },
  "value": 12,
}
`;

exports[`regex '23' AST to match snapshot 1`] = `
{
  "range": {
    "from": {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "to": {
      "column": 3,
      "index": 2,
      "line": 1,
    },
  },
  "value": 23,
}
`;

exports[`regex '234a' Error to match snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 4,
    "index": 3,
    "line": 1,
  },
}
`;

exports[`regex '4234' AST to match snapshot 1`] = `
{
  "range": {
    "from": {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "to": {
      "column": 5,
      "index": 4,
      "line": 1,
    },
  },
  "value": 4234,
}
`;

exports[`regex 'a1a' Error to match snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`regex 'a123' Error to match snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 4,
    "index": 3,
    "line": 1,
  },
}
`;

exports[`sequence 'a' Error to match snapshot 1`] = `
{
  "expected": [
    "'b'",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`sequence 'aa' Error to match snapshot 1`] = `
{
  "expected": [
    "'b'",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`sequence 'aab' Error to match snapshot 1`] = `
{
  "expected": [
    "'b'",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`sequence 'ab' AST to match snapshot 1`] = `
[
  "a",
  "b",
]
`;

exports[`sequence 'baba' Error to match snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`sequence eof 'a' Error to match snapshot 1`] = `
{
  "expected": [
    "'b'",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`sequence eof 'aa' Error to match snapshot 1`] = `
{
  "expected": [
    "'b'",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`sequence eof 'aab' Error to match snapshot 1`] = `
{
  "expected": [
    "'b'",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`sequence eof 'ab' AST to match snapshot 1`] = `
[
  "a",
  "b",
]
`;

exports[`sequence eof 'baba' Error to match snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`sequence trim 'b  a b' AST to match snapshot 1`] = `
[
  "b",
  "a",
  "b",
]
`;

exports[`sequence trim 'b ab' AST to match snapshot 1`] = `
[
  "b",
  "a",
  "b",
]
`;

exports[`sequence trim 'b abb' Error to match snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 5,
    "index": 4,
    "line": 1,
  },
}
`;

exports[`sequence trim 'ba  b' AST to match snapshot 1`] = `
[
  "b",
  "a",
  "b",
]
`;

exports[`sequence trim 'ba b' AST to match snapshot 1`] = `
[
  "b",
  "a",
  "b",
]
`;

exports[`sequence trim 'bab' AST to match snapshot 1`] = `
[
  "b",
  "a",
  "b",
]
`;

exports[`sequence trim 'bcaba' Error to match snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`single string 'a' Error to match snapshot 1`] = `
{
  "expected": [
    "'aba'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`single string 'ab' Error to match snapshot 1`] = `
{
  "expected": [
    "'aba'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`single string 'aba' AST to match snapshot 1`] = `"aba"`;

exports[`single string 'abab' Error to match snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 4,
    "index": 3,
    "line": 1,
  },
}
`;

exports[`single string 'ababa' Error to match snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 4,
    "index": 3,
    "line": 1,
  },
}
`;

exports[`trim '  a ' AST to match snapshot 1`] = `"a"`;

exports[`trim ' a' AST to match snapshot 1`] = `"a"`;

exports[`trim ' ab' Error to match snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 3,
    "index": 2,
    "line": 1,
  },
}
`;

exports[`trim 'a  ' AST to match snapshot 1`] = `"a"`;

exports[`trim 'a ' AST to match snapshot 1`] = `"a"`;

exports[`trim 'a' AST to match snapshot 1`] = `"a"`;

exports[`trim 'bcaba' Error to match snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;
